--- a/paper3/forcing/scavenging-particle-fields.ipynb
+++ b/paper3/forcing/scavenging-particle-fields.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "according-infection",
+   "id": "a4bbf1b5",
    "metadata": {},
    "source": [
     "# Create lithogenic and biogenic particle fields for Pb scavenging"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0179479-55fd-49d9-928e-44b2720ecc79",
+   "id": "f5962ebc",
    "metadata": {},
    "source": [
     "BLING ends in April, 2019"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "placed-collectible",
+   "id": "1cbad467",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "agreed-solid",
+   "id": "4ef9bbde",
    "metadata": {},
    "source": [
     "#### Parameters / settings:"
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "conservative-danish",
+   "id": "e019f496",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intimate-training",
+   "id": "c0faded5",
    "metadata": {},
    "source": [
     "#### Load files"
@@ -72,11 +72,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "selective-silicon",
+   "id": "daf9946d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh         = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20220317.nc')\n",
+    "mesh         = xr.open_dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "mesh_lon     = mesh['nav_lon'].values\n",
     "mesh_lat     = mesh['nav_lat'].values\n",
     "mesh_bathy   = mesh['tmask'][0,:,:,:].values\n",
@@ -88,13 +88,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "seventh-spare",
+   "id": "babe39ce",
    "metadata": {},
    "outputs": [],
    "source": [
     "# BLING:\n",
-    "folder_EPM101 = '/data/brogalla/ANHA4/BLING-EPM101/'\n",
-    "dset          = xr.open_dataset(f'/ocean/brogalla/GEOTRACES/BLING-EPM101/ANHA4-EPM101_y2002m08d13_gridB.nc')\n",
+    "folder_EPM101 = '/data/brogalla/ANHA4/BLING-EPM151/'\n",
+    "dset          = xr.open_dataset(f'/data/brogalla/ANHA4/BLING-EPM151/ANHA4-EPM151_y2002m08d13_gridB.nc')\n",
     "ANHA4_lons    = dset['nav_lon'].values\n",
     "ANHA4_lats    = dset['nav_lat'].values\n",
     "ANHA4_depths  = dset['deptht'].values"
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "located-single",
+   "id": "49b6ba76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0d903d4a-ed25-457b-be76-b71e7d9d27bd",
+   "id": "44270bc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "presidential-maximum",
+   "id": "cc23fa2c",
    "metadata": {},
    "source": [
     "#### Functions:"
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "ceb7b992-af5d-4daf-a254-2a3791343077",
+   "id": "66c45c56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "def5d73e-ab07-4039-b748-d9d9d33703cb",
+   "id": "c0a3b0b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,13 +189,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "13f1db7f-3cba-4cd6-8cbf-9eed4ec4dd5d",
+   "id": "aa9ac9cf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def load_bio(year, month):\n",
     "    # BLING:\n",
-    "    file_EPM101  = f'/data/brogalla/ANHA4/BLING-EPM101/ANHA4-EPM101_y{year}m{month:02}.nc'\n",
+    "    file_EPM101  = f'/data/brogalla/ANHA4/BLING-EPM151/ANHA4-EPM151_y{year}m{month:02}.nc'\n",
     "    \n",
     "    with xr.open_dataset(f'{file_EPM101}') as dset_bio:\n",
     "        fpop_ANHA4   = dset_bio['fpop'][:,:,:].values      # sinking particulate organic matter in phosphate units (mol P/m3)\n",
@@ -239,8 +239,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "b2f9a584-e2fd-4528-9359-ff9f04e84730",
+   "execution_count": 10,
+   "id": "1e019268",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
     "    ANHA12_litho[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)] = 0.0; ANHA12_fpops[(mesh_bathy[:,imin:imax,jmin:jmax] < 0.1)] = 0.0; \n",
     "    \n",
     "    if save:\n",
-    "        folder =f'/ocean/brogalla/GEOTRACES/data/Pb-tuning-202302/{loc}'\n",
+    "        folder =f'/ocean/brogalla/GEOTRACES/data/Pb-forcing-202311/{loc}'\n",
     "        save_file(f'{folder}', ANHA12_litho, ANHA12_fpop, ANHA12_fpops, ANHA12_biom, year, month)\n",
     "    \n",
     "    return ANHA12_litho, ANHA12_biom"
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed037403-b003-445b-86d9-834df765effd",
+   "id": "830503cf",
    "metadata": {},
    "source": [
     "#### Calculations"
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "261430d6-7526-4907-84dd-477f80f2d565",
+   "id": "26c28d78",
    "metadata": {},
    "source": [
     "Create particle fields and save:"
@@ -289,14 +289,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "008fe938-ab15-43c1-9a48-06827840a50d",
+   "execution_count": 11,
+   "id": "2e304843",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "2006 1\n",
+      "2006 2\n",
+      "2006 3\n",
+      "2006 4\n",
+      "2006 5\n",
+      "2006 6\n",
+      "2006 7\n",
+      "2006 8\n",
+      "2006 9\n",
+      "2006 10\n",
+      "2006 11\n",
+      "2006 12\n",
+      "2007 1\n",
+      "2007 2\n",
+      "2007 3\n",
+      "2007 4\n",
+      "2007 5\n",
+      "2007 6\n",
+      "2007 7\n",
+      "2007 8\n",
+      "2007 9\n",
+      "2007 10\n",
+      "2007 11\n",
+      "2007 12\n",
+      "2008 1\n",
+      "2008 2\n",
+      "2008 3\n",
+      "2008 4\n",
+      "2008 5\n",
+      "2008 6\n",
+      "2008 7\n",
+      "2008 8\n",
+      "2008 9\n",
+      "2008 10\n",
+      "2008 11\n",
+      "2008 12\n",
+      "2009 1\n",
+      "2009 2\n",
+      "2009 3\n",
+      "2009 4\n",
+      "2009 5\n",
+      "2009 6\n",
+      "2009 7\n",
+      "2009 8\n",
+      "2009 9\n",
+      "2009 10\n",
+      "2009 11\n",
+      "2009 12\n",
+      "2010 1\n",
+      "2010 2\n",
+      "2010 3\n",
+      "2010 4\n",
+      "2010 5\n",
+      "2010 6\n",
+      "2010 7\n",
+      "2010 8\n",
+      "2010 9\n",
+      "2010 10\n",
+      "2010 11\n",
+      "2010 12\n",
+      "2011 1\n",
+      "2011 2\n",
+      "2011 3\n",
+      "2011 4\n",
+      "2011 5\n",
+      "2011 6\n",
+      "2011 7\n",
+      "2011 8\n",
+      "2011 9\n",
+      "2011 10\n",
+      "2011 11\n",
+      "2011 12\n",
+      "2012 1\n",
+      "2012 2\n",
+      "2012 3\n",
+      "2012 4\n",
+      "2012 5\n",
+      "2012 6\n",
+      "2012 7\n",
+      "2012 8\n",
+      "2012 9\n",
+      "2012 10\n",
+      "2012 11\n",
+      "2012 12\n",
+      "2013 1\n",
+      "2013 2\n",
+      "2013 3\n",
+      "2013 4\n",
+      "2013 5\n",
+      "2013 6\n",
+      "2013 7\n",
+      "2013 8\n",
+      "2013 9\n",
+      "2013 10\n",
+      "2013 11\n",
+      "2013 12\n",
+      "2014 1\n",
+      "2014 2\n",
+      "2014 3\n",
+      "2014 4\n",
+      "2014 5\n",
+      "2014 6\n",
+      "2014 7\n",
+      "2014 8\n",
+      "2014 9\n",
+      "2014 10\n",
+      "2014 11\n",
+      "2014 12\n",
+      "2015 1\n",
+      "2015 2\n",
+      "2015 3\n",
+      "2015 4\n",
+      "2015 5\n",
+      "2015 6\n",
+      "2015 7\n",
+      "2015 8\n",
+      "2015 9\n",
+      "2015 10\n",
+      "2015 11\n",
+      "2015 12\n",
+      "2016 1\n",
+      "2016 2\n",
+      "2016 3\n",
+      "2016 4\n",
+      "2016 5\n",
+      "2016 6\n",
+      "2016 7\n",
+      "2016 8\n",
+      "2016 9\n",
+      "2016 10\n",
+      "2016 11\n",
+      "2016 12\n",
       "2017 1\n",
       "2017 2\n",
       "2017 3\n",
@@ -332,21 +464,45 @@
       "2019 9\n",
       "2019 10\n",
       "2019 11\n",
-      "2019 12\n"
+      "2019 12\n",
+      "2020 1\n",
+      "2020 2\n",
+      "2020 3\n",
+      "2020 4\n",
+      "2020 5\n",
+      "2020 6\n",
+      "2020 7\n",
+      "2020 8\n",
+      "2020 9\n",
+      "2020 10\n",
+      "2020 11\n",
+      "2020 12\n",
+      "2021 1\n",
+      "2021 2\n",
+      "2021 3\n",
+      "2021 4\n",
+      "2021 5\n",
+      "2021 6\n",
+      "2021 7\n",
+      "2021 8\n",
+      "2021 9\n",
+      "2021 10\n",
+      "2021 11\n",
+      "2021 12\n"
      ]
     }
    ],
    "source": [
-    "for year in range(2017, 2020):\n",
+    "for year in range(2006, 2022):\n",
     "    for month in range(1,13):\n",
     "        print(year, month)\n",
-    "        litho, bio = create_particle_fields(year, month, save=True, loc = 'base2/')"
+    "        litho, bio = create_particle_fields(year, month, save=True, loc = 'particle-fields/')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "547f205f-a107-4936-b48a-64f0d8070976",
+   "id": "53b6f486",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7b5de379-81b6-414e-a75b-6404e3ce6e96",
+   "id": "f478954a",
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f1d40e6-920f-4133-b587-6dd740e4a39c",
+   "id": "10b08e27",
    "metadata": {},
    "source": [
     "#### Extra: compare ANHA4 original field and interpolated field:\n",
@@ -384,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "d2318e2e-5883-47aa-b8f9-0265a52826a7",
+   "id": "2c712892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "3df271c4-b5dc-4ee6-b230-0fa398f33c50",
+   "id": "ea258d9a",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +581,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "1ea79ab3-2938-4329-8627-6a7b748f66d6",
+   "id": "e8e388e6",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "386a2317-cf0a-4bc2-adf7-fe3d3cde8194",
+   "id": "89e161b8",
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4c03722-3308-4946-a579-d4b45176162c",
+   "id": "3d3d81bc",
    "metadata": {},
    "outputs": [],
    "source": []
