--- a/paper3/forcing/atm-CESM.ipynb
+++ b/paper3/forcing/atm-CESM.ipynb
@@ -2,7 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "# Create monthly CESM atmospheric deposition files\n",
     "\n",
