--- a/paper3/particle-tracking/convert-zarr.ipynb
+++ b/paper3/particle-tracking/convert-zarr.ipynb
@@ -50,28 +50,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "19549634-3a3e-435b-a02c-0a23521649d6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pt = xr.open_zarr(f'{base_folder}test2-20230202.zarr')"
+    "pt = xr.open_zarr(f'{base_folder}run-2014-01-repeatdt-24months_20230325.zarr')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8a63e9ce-306f-48d6-a75a-bdb4457a731c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pt.to_netcdf(f\"{base_folder}test2-20230202.nc\")"
+    "pt.to_netcdf(f\"{base_folder}run-2014-01-repeatdt-24months_20230325.nc\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ba7908e-1a55-44b0-8d36-9e3f897baf7d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -85,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.6.11"
   }
  },
  "nbformat": 4,
