renumbering supplementary figs

--- a/paper3/S1-end-members.ipynb
+++ b/paper3/S1-end-members.ipynb
@@ -19,6 +19,7 @@
     "import cmocean\n",
     "import gsw\n",
     "import xarray as xr\n",
+    "from constants import imin, imax, jmin, jmax, isize, jsize, rimwidthN, rimwidthS, rimwidthW, rimwidthE\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -36,16 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domain dimensions:\n",
-    "imin, imax = 1139, 2179\n",
-    "jmin, jmax = 159, 799\n",
-    "\n",
-    "# Rimwidths:\n",
-    "rimwidthN  = 10\n",
-    "rimwidthS  = 10\n",
-    "rimwidthW  = 10\n",
-    "rimwidthE  = 20\n",
-    "\n",
     "# Boundary coordinates: (i1,i2,j1,j2)\n",
     "bdy_NCB = (1598,2177,778,798) # Northern Canada Basin \n",
     "bdy_WCB = (2168,2178,390,797) # Western Canada Basin \n",
@@ -383,7 +374,7 @@
     "ax[2].set_ylim(-3,4)\n",
     "ax[2].set_xlim(24,35.5) \n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb/M5-endmembers.jpg', dpi=300, bbox_inches='tight')"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_202402/S1-endmembers.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
