re-order supplementary figure numbers and add separate file for constants

--- a/paper3/S2-initial-conditions.ipynb
+++ b/paper3/S2-initial-conditions.ipynb
@@ -21,6 +21,7 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.basemap import Basemap\n",
     "from matplotlib.colors import ListedColormap\n",
+    "from constants import imin, imax, jmin, jmax\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -38,10 +39,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domain dimensions:\n",
-    "imin, imax = 1139, 2179\n",
-    "jmin, jmax = 159, 799\n",
-    "\n",
     "# colors:\n",
     "land_color         = '#a9a7a2'\n",
     "land_outline_color = '#373736'"
@@ -56,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,13 +63,12 @@
     "mesh_lat     = mesh['nav_lat'].values\n",
     "mesh_bathy   = mesh['tmask'].values[0,:,:,:]\n",
     "bathy_masked = np.ma.masked_where((mesh_bathy> 0.1), mesh_bathy)\n",
-    "ocean_masked = np.ma.masked_where((mesh_bathy<0.1), mesh_bathy)\n",
     "depths       = mesh['nav_lev'].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +174,7 @@
     "\n",
     "plt.tight_layout()\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb/S1.jpg', dpi=300, bbox_inches='tight')"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_202402/S2.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
