--- a/paper3/S5-Pb-blackcarbon-ratio.ipynb
+++ b/paper3/S5-Pb-blackcarbon-ratio.ipynb
@@ -30,6 +30,7 @@
     "import datetime\n",
     "import calendar\n",
     "from scipy.optimize import leastsq\n",
+    "from constants import imin, imax, jmin, jmax\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +53,8 @@
     "color_BC      = '#c9c9c9'\n",
     "color_BC_line = '#a0a0a0'\n",
     "\n",
-    "# domain dimensions:\n",
-    "imin, imax = 1139, 2179\n",
-    "jmin, jmax = 159, 799\n",
-    "\n",
     "# Modified ANHA12 mesh mask file (http://knossos.eas.ualberta.ca/anha/anhatable.php)\n",
-    "mesh         = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20220317.nc')\n",
+    "mesh         = nc.Dataset('/ocean/brogalla/GEOTRACES/data/ANHA12/ANHA12_mask_Pb-20230213.nc')\n",
     "mesh_lon     = np.array(mesh.variables['nav_lon'])\n",
     "mesh_lat     = np.array(mesh.variables['nav_lat'])\n",
     "mesh_bathy   = np.array(mesh.variables['tmask'][0,:,:,:])\n",
@@ -77,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +431,7 @@
     "fig.text(0.53, 0.94, 'c)', fontsize=10, weight='bold')\n",
     "    \n",
     "plt.tight_layout()\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb/S3.jpg', dpi=300, bbox_inches='tight')"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_202402/S5.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
