--- a/paper3/S7-sediment-in-ice.ipynb
+++ b/paper3/S7-sediment-in-ice.ipynb
@@ -19,6 +19,7 @@
     "import pickle\n",
     "import xarray as xr\n",
     "from matplotlib.colors import ListedColormap\n",
+    "from constants import imin, imax, jmin, jmax\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -36,10 +37,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domain dimensions:\n",
-    "imin, imax = 1139, 2179\n",
-    "jmin, jmax = 159, 799\n",
-    "\n",
     "# Colormap\n",
     "N = 256\n",
     "vals_cont = np.ones((N, 4))\n",
@@ -94,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +127,7 @@
     "CB1.outline.set_linewidth(0.6)\n",
     "CB1.ax.set_title('Proportion of shelf \\n sediments in sea ice', fontsize=5.5)\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb/S5.jpg', dpi=300, bbox_inches='tight')"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_202402/S7.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
