--- a/paper3/S9-regions.ipynb
+++ b/paper3/S9-regions.ipynb
@@ -21,6 +21,7 @@
     "import cmocean\n",
     "import pickle\n",
     "from matplotlib.colors import ListedColormap\n",
+    "from constants import imin, imax, jmin, jmax, isize, jsize, rimwidthN, rimwidthS, rimwidthW, rimwidthE\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -40,18 +41,6 @@
    },
    "outputs": [],
    "source": [
-    "# domain dimensions:\n",
-    "jmin, jmax = 159, 799\n",
-    "imin, imax = 1139, 2179\n",
-    "jsize = jmax-jmin\n",
-    "isize = imax-imin\n",
-    "\n",
-    "# Rimwidths:\n",
-    "rimwidthN  = 10\n",
-    "rimwidthS  = 10\n",
-    "rimwidthW  = 10\n",
-    "rimwidthE  = 20\n",
-    "\n",
     "# Boundary coordinates: (i1,i2,j1,j2)\n",
     "bdy_NCB = (1598,2177,777,797) # Northern Canada Basin\n",
     "bdy_WCB = (2167,2177,390,797) # Western Canada Basin\n",
@@ -115,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -175,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -219,19 +208,8 @@
     "leg = ax1.legend(loc=(0.05, 0.05), fontsize=5, facecolor='white', fancybox=False, framealpha=1, edgecolor='white')\n",
     "leg.set_title('Regions:', prop={'size':5.5})\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb/S6.jpg', bbox_inches='tight', dpi=300)"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_202402/S9.jpg', bbox_inches='tight', dpi=300)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
