--- a/paper3/S6-sediment-resuspension.ipynb
+++ b/paper3/S6-sediment-resuspension.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,7 @@
     "import pickle\n",
     "import xarray as xr\n",
     "from matplotlib.colors import ListedColormap\n",
+    "from constants import imin, imax, jmin, jmax\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -31,14 +32,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# domain dimensions:\n",
-    "imin, imax = 1139, 2179\n",
-    "jmin, jmax = 159, 799\n",
-    "\n",
     "# Colormap\n",
     "N = 256\n",
     "vals_cont = np.ones((N, 4))\n",
@@ -60,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +135,7 @@
     "CB1.outline.set_linewidth(0.6)\n",
     "CB1.ax.set_title('Log. of erosion rate', fontsize=5.5)\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb/S4.jpg', dpi=300, bbox_inches='tight')"
+    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/Pb_202402/S6.jpg', dpi=300, bbox_inches='tight')"
    ]
   },
   {
